--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ firebase-debug.log*
 # it commented so all members can deploy to the same project(s) in .firebaserc.
 # .firebaserc
 
+#file
+imp.txt
+
 # Runtime data
 pids
 *.pid
